<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/historyCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/qb_px_16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.maps.MapView
            android:id="@+id/googleMapView"
            android:layout_width="match_parent"
            map:liteMode="true"
            map:mapType="none"
            android:clickable="false"
            android:layout_height="@dimen/qb_px_210" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/googleMapView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/qb_px_8"
            android:layout_marginBottom="@dimen/qb_px_16"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baijamjuree_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorTraining"
                android:textSize="@dimen/app_text_size_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baijamjuree_regular"
                android:paddingStart="@dimen/qb_px_16"
                android:paddingEnd="@dimen/qb_px_16"
                android:text="@string/distance"
                android:textColor="@color/colorTraining"
                android:textSize="@dimen/app_text_size_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/googleMapView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/qb_px_8"
            android:layout_marginBottom="@dimen/qb_px_16"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAvgSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baijamjuree_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorTraining"
                android:textSize="@dimen/app_text_size_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baijamjuree_regular"
                android:paddingStart="@dimen/qb_px_16"
                android:paddingEnd="@dimen/qb_px_16"
                android:text="@string/average_speed"
                android:textColor="@color/colorTraining"
                android:textSize="@dimen/app_text_size_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/googleMapView"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/qb_px_8"
            android:layout_marginBottom="@dimen/qb_px_16"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baijamjuree_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorTraining"
                android:textSize="@dimen/app_text_size_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baijamjuree_regular"
                android:paddingStart="@dimen/qb_px_16"
                android:paddingEnd="@dimen/qb_px_16"
                android:text="@string/duration"
                android:textColor="@color/colorTraining"
                android:textSize="@dimen/app_text_size_14sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>